# bitcoin-rust-educational

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  CLI_GUIDE.md  DEVELOPMENT_PHASES.md  PROJECT_OVERVIEW.md
examples/: mine_genesis.rs
src/: cli.rs  lib.rs  main.rs
src/consensus/: gpu_pow.rs  mod.rs  pow.rs  validation.rs
src/core/: block.rs  hash.rs  mod.rs  script.rs  serialize.rs  transaction.rs  types.rs
src/network/: message.rs  mod.rs  node.rs  peer.rs
src/storage/: blockchain_db.rs  mod.rs  utxo_set.rs
src/wallet/: keystore.rs  mod.rs  tx_builder.rs
